// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toMatchSnapshot mount 1`] = `
.c0 {
  padding: 4em;
  background: papayawhip;
}

.c1 {
  font-size: 1.5em;
  -webkit-text-align: center;
  text-align: center;
  color: palevioletred;
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1 em {
  color: green;
}

@media (min-width: 600px) {
  .c1 {
    color: blue;
  }
}

@supports (display: grid) {
  .c1 {
    display: grid;
  }
}

<styled.section>
  <section
    className="c0"
  >
    <styled.h1>
      <h1
        className="c1"
      >
        Hello World, this is my first styled component!
      </h1>
    </styled.h1>
  </section>
</styled.section>
`;

exports[`toMatchSnapshot null 1`] = `null`;

exports[`toMatchSnapshot shallow 1`] = `
.c0 {
  padding: 4em;
  background: papayawhip;
}

<section
  className="c0"
>
  <styled.h1>
    Hello World, this is my first styled component!
  </styled.h1>
</section>
`;

exports[`toMatchSnapshot test-renderer 1`] = `
.c0 {
  padding: 4em;
  background: papayawhip;
}

.c1 {
  font-size: 1.5em;
  -webkit-text-align: center;
  text-align: center;
  color: palevioletred;
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1 em {
  color: green;
}

@media (min-width: 600px) {
  .c1 {
    color: blue;
  }
}

@supports (display: grid) {
  .c1 {
    display: grid;
  }
}

<section
  className="c0"
>
  <h1
    className="c1"
  >
    Hello World, this is my first styled component!
  </h1>
</section>
`;
